--- a/capstone-project/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/capstone-project/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -10,31 +10,23 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <link href="~/Content/Style.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Index", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        @*@using (Html.BeginForm("SearchResult", "Recipe", FormMethod.Get))
-                        {
-                            @Html.TextBox("SearchTerm", null, new { placeholder = "search here", @class = "form-control", style = "margin-top: 7px;" })
-                        }*@
-
-                    </li>
-                </ul>
-            </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <img id="img" src="~/content/Images/geek.png" alt="Geek" />
         </div>
-    </div>
+        <div id="heading" class="col-lg-offset-5">
+            <h1>National Park Geek</h1>
+        </div>
+    <nav class="navbar navbar-inverse">
+        <ul class="nav navbar-nav">
+            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+            <li>@Html.ActionLink("Survey", "Survey", "Home")</li>
+        </ul>
+        <p class="navbar-text">Welcome to National Park Geek!</p>
+    </nav>
 
     <div class="container body-content">
         @RenderBody()
