--- a/capstone-project/Capstone.Web/Views/Home/Detail.cshtml
+++ b/capstone-project/Capstone.Web/Views/Home/Detail.cshtml
@@ -13,7 +13,7 @@
 <section>
 
     <div>
-        <img id="detailImage" src="@Url.Content("~/Content/Images/parks/" + Model.Park.ParkCode.ToLower() + ".jpg")" alt="@Model.Park.ParkCode"/>
+        <img id="detailImage" src="@Url.Content("~/Content/Images/parks/" + Model.Park.ParkCode.ToLower() + ".jpg")" alt="@Model.Park.ParkName"/>
     </div>
 
     <p>Acreage: @Model.Park.Acreage</p>
