--- a/capstone-project/Capstone.Web/Views/Home/Detail.cshtml
+++ b/capstone-project/Capstone.Web/Views/Home/Detail.cshtml
@@ -8,15 +8,23 @@
     string c;
 }
 
-<h2>@Model.Park.ParkName</h2>
-<h3>@Model.Park.State</h3>
+<h2>@Model.Park.ParkName <span id="state">@Model.Park.State</span></h2>
+<h3></h3>
 
-<section>
+<section class="section">
 
     <div>
         <img id="detailImage" src="@Url.Content("~/Content/Images/parks/" + Model.Park.ParkCode.ToLower() + ".jpg")" alt="@Model.Park.ParkName"/>
     </div>
+    <p>@Model.Park.ParkDescription</p>
 
+    <p>@Model.Park.InspirationalQuote</p>
+
+    <p>-- @Model.Park.InspirationalQuoteSource</p>
+
+</section>
+
+<section class="stats1">
     <p>Acreage: @Model.Park.Acreage</p>
 
     <p>Elevation: @Model.Park.ElevationInFeet feet</p>
@@ -31,17 +39,12 @@
 
     <p>Annual Visitors: @Model.Park.AnnualVisitorCount</p>
 
-    <p>@Model.Park.InspirationalQuote</p>
-
-    <p>-- @Model.Park.InspirationalQuoteSource</p>
-
-    <p>@Model.Park.ParkDescription</p>
 
     <p>Entry Fee: @Model.Park.EntryFee.ToString("C")</p>
 
     <p>Animal Species: @Model.Park.NumberOfAnimalSpecies</p>
 
-    
+    @*set temperature scale*@
 
     @if (Model.IsFahrenheit)
     {
@@ -51,30 +54,33 @@
     {
         c = "°C";
     }
+    <div class="weathercontainer">
 
-    <p>Today's Weather Alert!</p>
+        <p>Today's Weather Alert!</p>
 
-    <p>@Model.Recommendation(Model.FiveDaysOfWeather.First().Forecast, Model.FiveDaysOfWeather.First().High, Model.FiveDaysOfWeather.First().Low)</p>
+        <p>@Model.Recommendation(Model.FiveDaysOfWeather.First().Forecast, Model.FiveDaysOfWeather.First().High, Model.FiveDaysOfWeather.First().Low)</p>
 
-    @foreach(Weather w in Model.FiveDaysOfWeather)
-    {
-        <img id="weatherImage" src=@Url.Content("~/Content/Images/weather/" + w.Forecast.Replace(" ",string.Empty) + ".png") alt="@w.Forecast"/>
-        <p>High: @Model.ConvertTemp(Model.IsFahrenheit, w.High) @c</p>
-        <p>Low: @Model.ConvertTemp(Model.IsFahrenheit, w.Low) @c</p>
-    }
+        @foreach (Weather w in Model.FiveDaysOfWeather)
+        {
+            <div id="day">
+                <img id="weatherImage" src=@Url.Content("~/Content/Images/weather/" + w.Forecast.Replace(" ",string.Empty) + ".png") alt="@w.Forecast" />
+                <p>High: @Model.ConvertTemp(Model.IsFahrenheit, w.High) @c</p>
+                <p>Low: @Model.ConvertTemp(Model.IsFahrenheit, w.Low) @c</p>
+            </div>
+        }
 
-    @using (Html.BeginForm("Detail", "Home", FormMethod.Post))
-    {
-        <p>Toggle Fahrenheit or Celsius</p>
-        <input type="hidden" name="parkCode" value="@Model.Park.ParkCode" />
+        @using (Html.BeginForm("Detail", "Home", FormMethod.Post))
+        {
+            <p>Toggle Fahrenheit or Celsius</p>
+            <input type="hidden" name="parkCode" value="@Model.Park.ParkCode" />
 
-        <p>Fahrenheit</p>
-        <p>@Html.RadioButtonFor(m => m.IsFahrenheit, true)</p>
+            <p>Fahrenheit</p>
+            <p>@Html.RadioButtonFor(m => m.IsFahrenheit, true)</p>
 
-        <p>Celsius</p>
-        <p>@Html.RadioButtonFor(m => m.IsFahrenheit, false)</p>
+            <p>Celsius</p>
+            <p>@Html.RadioButtonFor(m => m.IsFahrenheit, false)</p>
 
-        <button>Switch!</button>
-    }
-
+            <button>Switch!</button>
+        }
+    </div>
 </section>
