--- a/capstone-project/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/capstone-project/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -15,11 +15,12 @@
 <body>
     <div class="row">
         <div class="col-sm-4">
-            <img id="img" src="~/content/Images/geek.png" alt="Geek" />
+            <img id="img" src="~/content/Images/logo.png" alt="Geek" />
         </div>
-        <div id="heading" class="col-lg-offset-5">
+        <div id="heading">
             <h1>National Park Geek</h1>
         </div>
+    </div>
     <nav class="navbar navbar-inverse">
         <ul class="nav navbar-nav">
             <li>@Html.ActionLink("Home", "Index", "Home")</li>
