--- a/capstone-project/Capstone.Web/Views/Home/FavoriteParks.cshtml
+++ b/capstone-project/Capstone.Web/Views/Home/FavoriteParks.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Our Visitors' Favorite Parks";
 }
 
-<h2>FavoriteParks</h2>
+<h2>Your Favorite Parks, Ranked</h2>
 
 @if (TempData["StatusMessage"] != null)
 {
