--- a/capstone-project/Capstone.Web/Content/Style.css
+++ b/capstone-project/Capstone.Web/Content/Style.css
@@ -98,10 +98,6 @@ textarea {
     .form-group label {
         width: 20em;
         display: inline-block;
-        /*vertical-align: top;*/
-        /*padding-left: 2em;
-        padding-top: 2em;*/
-        /*padding-bottom: 2em;*/
     }
     .form-control{
         display: inline;
@@ -110,7 +106,6 @@ textarea {
         display:inline-block;
         width: 300px;
         margin: 0;
-        /*text-align:start;*/
     }
 
 #img2{
@@ -121,7 +116,6 @@ textarea {
     
 }
 .surveybody {
-    /*background-image: url('Images/scenery.png');*/
     background: linear-gradient(rgba(255, 255, 255, .89), rgba(255, 255, 255, .8)), url('Images/scenery.png');
     background-repeat: no-repeat;
     background-position: center;
@@ -132,32 +126,77 @@ form button{
     margin-left: 20em;
 }
 
+
+#detailImage {
+    width: 100%;
+}
+
 #state{
     font-size: .75em;
     margin-left: 1em;
 }
-#day{
-    
-    display: inline-block;
-    padding: -1em;
+
+.weatheralert{
+    margin:5em;
+}
+
+#day {
+
+}
+.weatherchunk {
+    float: right;
+    clear: left;
+    display: inline;
+    padding: 0;
 }
 #weatherImage{
     width: 30%;
 }
 
-#detailImage{
-    float: left;
-    margin: 2em;
-}
 .stats1{
-    display: inline-block;
-    max-width: 60%
+   float:left;
+   display: inline-block;
+   max-width:200px;
+   margin: 1em;
 }
-.weathercontainer{
-    min-height: 100%;
-    max-width: 35%;
-    display:inline-block;
-    position: relative;
-    left: 30em;
-    float: right;
+
+
+.subhed{
+    margin:1em;
+    border:3px solid black;
+    padding: 1em;
+}
+
+.toggle {
+    display: block;
+    border: 2px solid black;
+    padding: 1em;
+    margin-top: 2em;
+}
+
+#togglebutton {
+    margin-left: 3em;
+
+}
+
+ul{
+    list-style-type:none;
+}
+
+li{
+    display:block;
+}
+li:first-child{
+
+}
+.todaysweather{
+    float:left;
+    width:40%;
+    text-align:center;
+}
+
+#radiotoggle{
+    position:relative;
+    bottom:1.75em;
+    display:inline;
 }
